<?xml version="1.0"?>
<package>
  <name>estop_watchdog</name>
  <version>0.0.1</version>
  <description>Stop or restart a software based on estop pulse</description>
  <author email="dorian.goepp@inria.fr">Dorian Goepp</author>
  <maintainer email="dorian.goepp@inria.fr">Dorian Goepp</maintainer>
  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>boost</build_depend> -->

  <!-- <run_depend>boost</run_depend> -->
</package>
